--- a/templates/usercenter/modifypassword.html
+++ b/templates/usercenter/modifypassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>我的资料</title>
+    <title>修改密码</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'gift_platform_site/style.css' %}">
 </head>
@@ -49,66 +49,64 @@
     <div class="left-nav">
         <div class="category">
             <span class="category-header">账号管理</span>
-            <a class="nav-item select" href="#">我的资料</a>
-            <a class="nav-item" href="#">修改密码</a>
+            <a class="nav-item" href="#">我的资料</a>
+            <a class="nav-item select" href="#">修改密码</a>
             <a class="nav-item" href="#">消息中心</a>
         </div>
     </div>
-
-<form method="post"   action="{% url 'gift_platform_site:myaccount' %}" id="myaccountform" >
-    <div class="right-content">
+    <div class="right-content1">
         <div class="content">
             <span class="content-header">
                 我的资料
             </span>
-            <span class="tel">手机：{{ currentuser.mobile }}</span>
-            <div class="group">
-                <div class="form-item mobile">
-                    <label>用户名：</label>
-                    <input name="username" placeholder="请输入用户名" value="{{ currentuser.username }}" />
+            <form method="post"   action="{% url 'gift_platform_site:modifypwd' %}" id="modifypwdform" >
+            <div class="modifyform">
+                <div class="formline">
+                        <p>旧密码:</p>
+                        <div>
+                            <input name="pwd" placeholder="请输入原密码" type="password"/>
+                        </div>
                 </div>
-                <div class="form-item sex">
-                    <label>性别：</label>
-                    <div class="drop-down">
-                        <select name="gender" class="selected" value="{{ gender }}">
-                            <option value ="1" {% ifequal gender 1 %}selected{% endifequal %}>男 ♂</option>
-                            <option  value ="0" {% ifequal gender 0 %}selected{% endifequal %}>女 ♀</option>
-                        </select>
-{#                        <span class="split"></span>#}
+                <div class="formline">
+                    <p>新密码:</p>
+                    <div>
+                        <input name="newpwd1" placeholder="请输入新密码" type="password"/>
                     </div>
                 </div>
-                <div class="clear"></div>
+                <div class="formline">
+                    <p>确认密码:</p>
+                    <div>
+                        <input name="newpwd2"  placeholder="请再次输入原密码" type="password"/>
+                    </div>
+                </div>
+                <div class="formline">
+                    <p></p>
+                    <a href="#">保存</a>
+                </div>
+
             </div>
-            <div class="form-item email">
-                <label>邮箱：</label>
-                <input name="email" placeholder="请输入邮箱" value="{{ currentuser.email }}" />
-            </div>
-            <a class="save-btn" href="javascript:void(0)" onclick="document.getElementById('myaccountform').submit()">保存</a>
+            </form>
         </div>
     </div>
-        {% csrf_token %}
-    </form>
-
-
     <div class="clear"></div>
 </div>
 <div class="footer">
     <div class="container">
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_1.png' %}">
+                <img src="images/footer_icon_1.png">
                 <span>物流送货上门</span>
             </div>
         </div>
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_2.png' %}">
+                <img src="images/footer_icon_2.png">
                 <span>正规渠道进货</span>
             </div>
         </div>
         <div class="item-wrap">
             <div class="footer-icon-group">
-                <img src="{% static 'gift_platform_site/images/footer_icon_3.png' %}">
+                <img src="images/footer_icon_3.png">
                 <span>商品品质保证</span>
             </div>
         </div>
