完成修改密码页面

--- a/templates/usercenter/modifypassword.html
+++ b/templates/usercenter/modifypassword.html
@@ -66,23 +66,45 @@
                         <div>
                             <input name="pwd" placeholder="请输入原密码" type="password"/>
                         </div>
+                    {% if errormesg %}
+                        <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                        <span>{{ errormesg }}</span>
+                    {% endif %}
+                    {% if mdform.errors.pwd %}
+                        <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                        <p class="wrong">{{ mdform.errors.pwd.0 }}</p>
+                    {% endif %}
+
                 </div>
                 <div class="formline">
                     <p>新密码:</p>
                     <div>
                         <input name="newpwd1" placeholder="请输入新密码" type="password"/>
                     </div>
+                    {% if mdform.errors.newpwd1 %}
+                        <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                        <p class="wrong">{{ mdform.errors.newpwd1.0 }}</p>
+                    {% endif %}
                 </div>
                 <div class="formline">
                     <p>确认密码:</p>
                     <div>
                         <input name="newpwd2"  placeholder="请再次输入原密码" type="password"/>
                     </div>
+                    {% if errormesg1 %}
+                        <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                        <span>{{ errormesg1 }}</span>
+                    {% endif %}
+                    {% if mdform.errors.newpwd2 %}
+                        <img src="{% static 'gift_platform_site/images/wrong.png' %}">
+                        <p class="wrong">{{ mdform.errors.newpwd2.0 }}</p>
+                    {% endif %}
                 </div>
                 <div class="formline">
                     <p></p>
-                    <a href="#">保存</a>
+                    <a href="javascript:void(0)" onclick="document.getElementById('modifypwdform').submit()">保存</a>
                 </div>
+            {% csrf_token %}
 
             </div>
             </form>
