--- a/static_assets/gift_platform_site/style.css
+++ b/static_assets/gift_platform_site/style.css
@@ -1733,6 +1733,16 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
             outline: none;
             border: 0;
             box-shadow: none; }
+        .right-content1 .content .modifyform .formline img {
+          margin-left: 8px; }
+        .right-content1 .content .modifyform .formline span {
+          margin-left: 4px;
+          font-size: 14px;
+          height: 40px;
+          color: #D0021B;
+          display: inline-block;
+          vertical-align: middle;
+          line-height: 40px; }
         .right-content1 .content .modifyform .formline a {
           border-radius: 53px;
           height: 42px;
