将后台内容模板化

--- a/templates/usercenter/modifypassword.html
+++ b/templates/usercenter/modifypassword.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>修改密码</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'gift_platform_site/style.css' %}">
-</head>
-<body>
-<div class="header">
-    <div class="content-wrap">
-        <span class="welcome">Hi，欢迎来到一点礼品公司！^o^</span>
-        <div class="button-wrap">
-            <a href="#">用户名</a>
-            <a class="acls" href="#">消息</a>
-            <a href="#">退出</a>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <div class="search-head-wrap">
-        <img class="logo" src="{% static 'gift_platform_site/images/logo.png' %}">
-        <div class="search-wrap">
-            <div class="search">
-                <div class="tab">
-                    <span class="tab-item select">商品</span>
-                    <span class="tab-item">厂家</span>
-                </div>
-                <input type="text">
-                <a class="search-btn">
-                    搜索
-                </a>
-            </div>
-        </div>
-        <div class="clear"></div>
-    </div>
-</div>
-<div class="nav">
-    <div class="nav-wrap">
-        <a href="#">最新动态</a>
-        <a href="#">精选专题</a>
-        <a class="active" href="#">产品分类</a>
-        <a href="#">品牌专区</a>
-        <a href="#">一件代发</a>
-        <a href="#">关于我们</a>
-    </div>
-</div>
+{% extends 'share/base_layout_usercenter.html' %}
+{% block title %}我的资料{% endblock %}
+
+{% block content %}
+{% load static %}
 <div class="container admin">
     <div class="left-nav">
         <div class="category">
@@ -112,36 +70,4 @@
     </div>
     <div class="clear"></div>
 </div>
-<div class="footer">
-    <div class="container">
-        <div class="item-wrap">
-            <div class="footer-icon-group">
-                <img src="images/footer_icon_1.png">
-                <span>物流送货上门</span>
-            </div>
-        </div>
-        <div class="item-wrap">
-            <div class="footer-icon-group">
-                <img src="images/footer_icon_2.png">
-                <span>正规渠道进货</span>
-            </div>
-        </div>
-        <div class="item-wrap">
-            <div class="footer-icon-group">
-                <img src="images/footer_icon_3.png">
-                <span>商品品质保证</span>
-            </div>
-        </div>
-    </div>
-    <div class="copyright">
-        <div>
-            <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
-        </div>
-        <div>
-            <p>一点公司版权所有 © 1997-2018   食品经营许可证：JY133****0111719</p>
-        </div>
-    </div>
-</div>
-
-</body>
-</html>
+{% endblock %}
