--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -16,62 +16,16 @@
     </div>
     <div class="clear"></div>
     <div class="product-list-wrap">
+        {% for product in products %}
         <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
+            <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
             <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
+                <div class="name">{{ product.name }}</div>
+                <div class="price">￥{{ product.productItems.first.price }}</div>
+                <div class="company">{{ product.belongs.suppliername }}</div>
             </div>
         </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
-        <div class="product-list-item">
-            <img class="image-cover" src="images/demo_cover_image.png" />
-            <div class="desc-wrap">
-                <div class="name">膳魔师保温杯</div>
-                <div class="price">￥88.0</div>
-                <div class="company">上海好利友公司</div>
-            </div>
-        </div>
+        {% endfor %}
         <div class="clear"></div>
     </div>
 </div>
