添加品牌列表，添加分组列表。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -32,7 +32,7 @@
             </div>
             <div class="cart-wrap">
                 <div class="cart">
-                    <img src="images/cart.png" />
+                    <img src="{% static 'gift_platform_site/images/cart.png' %}" />
                     <span class="product-count">
                 0
             </span>
