--- a/templates/products/category_product_list.html
+++ b/templates/products/category_product_list.html
@@ -15,12 +15,12 @@
         </div>
         <div class="query-item-wrap">
             <span class="query-name">单价</span>
-            <a class="query-param" href="#">不限</a>
-            <a class="query-param" href="#">0-20</a>
-            <a class="query-param" href="#">20-50</a>
-            <a class="query-param" href="#">50-100</a>
-            <a class="query-param" href="#">100-200</a>
-            <a class="query-param" href="#">200以上</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=0&in_private={{ in_private }}">不限</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=1&in_private={{ in_private }}">0-20</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=2&in_private={{ in_private }}">20-50</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=3&in_private={{ in_private }}">50-100</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=4&in_private={{ in_private }}">100-200</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=5&in_private={{ in_private }}">200以上</a>
         </div>
         <div class="query-item-wrap">
             <span class="query-name">数量</span>
@@ -33,9 +33,9 @@
         </div>
         <div class="query-item-wrap">
             <span class="query-name">区域</span>
-            <a class="query-param" href="#">不限</a>
-            <a class="query-param" href="#">公有</a>
-            <a class="query-param" href="#">私有</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=0&price_range={{ price_range }}">不限</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=1&price_range={{ price_range }}">公有</a>
+            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=2&price_range={{ price_range }}">私有</a>
         </div>
     </div>
     <div class="sort-bar">
@@ -45,7 +45,7 @@
     <div class="product-list-wrap">
         {% for product in products %}
         <div class="product-list-item">
-            <img class="image-cover" src="../images/demo_cover_image.png" />
+            <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
             <div class="desc-wrap">
                 <div class="name">{{ product.name }}</div>
                 <div class="price">￥{{ product.productItems.first.price }}</div>
@@ -55,9 +55,26 @@
         <div class="clear"></div>
     </div>
     <div class="pagination">
+        {% if products.has_previous %}
         <span class="page-item">
-            <a href="#">上一页</a>
+            <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ products.previous_page_number }}&in_private={{ in_private }}&price_range={{ price_range }}">上一页</a>
         </span>
+        {% endif %}
+        {% if products.paginator.num_pages < 5  %}
+            {% for i in page_range %}
+                <span class="page-item">
+                    <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ i }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
+                </span>
+            {% endfor %}
+        {% else %}
+            <span class="page-item">
+                <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ 1 }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
+            </span>
+            <span class="page-item more">
+                ...
+            </span>
+
+        {% endif %}
         <span class="page-item">
             <a href="#">1</a>
         </span>
@@ -77,7 +94,9 @@
             <a href="#">4</a>
         </span>
         <span class="page-item">
-            <a href="#">下一页</a>
+            {% if products.has_next %}
+            <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ products.next_page_number }}&in_private={{ in_private }}&price_range={{ price_range }}">下一页</a>
+            {% endif %}
         </span>
         <div class="jump-to">
             <span>到</span>
