--- a/static_assets/gift_platform_site/style.css
+++ b/static_assets/gift_platform_site/style.css
@@ -157,7 +157,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
             float: right;
             width: 15px;
             height: 15px;
-            background: url(../images/close.png) no-repeat;
+            background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
             background-size: 15px 15px; }
       .search-head-wrap .search-wrap .cart-wrap .cart {
         position: relative;
@@ -188,11 +188,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
         padding-right: 19px;
         margin-right: 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-down {
-        background: url(../images/arrow_down.png) no-repeat;
+        background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-up {
-        background: url(../images/arrow_up.png) no-repeat;
+        background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .split {
@@ -211,8 +211,10 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .product-list-wrap .product-list-item {
   float: left; }
+
 .product-list-wrap .product-list-item:not(:nth-child(4n)) {
   margin-right: 24px; }
+
 .product-list-wrap .product-list-item {
   margin-top: 31px; }
 
@@ -365,7 +367,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     width: 350px;
     height: 100%;
     background-color: #B19B70;
-    background-image: url(images/supplier.png); }
+    background-image: url(c8b13e36074f27a91f22d1546297dc2c.png); }
     .regtypes .choose1 div {
       border-radius: 100px;
       width: 108px;
@@ -393,7 +395,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     height: 100%;
     width: 350px;
     background-color: #B19B70;
-    background-image: url(images/giftcompany.png); }
+    background-image: url(8197297633ea478a32d2d3029ab830c0.png); }
     .regtypes .choose2 div {
       border-radius: 100px;
       width: 108px;
@@ -469,10 +471,10 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
       justify-content: flex-start; }
       .regform .usernamereg div:nth-child(3) img {
         margin-left: 12px; }
-      .regform .usernamereg div:nth-child(3) .wrong {
+      .regform .usernamereg div:nth-child(3) .usernamewrong {
         font-size: 14px;
         color: #D0021B; }
-      .regform .usernamereg div:nth-child(3) .right {
+      .regform .usernamereg div:nth-child(3) .usernameright {
         font-size: 14px;
         color: #7ED321; }
   .regform .mobilereg {
@@ -517,22 +519,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
           font-size: 14px;
           text-decoration: none; }
     .regform .mobilereg div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .mobilereg div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .mobilereg div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .mobilereg div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
+      flex: 1; }
   .regform .yanzhengmareg {
     order: 2;
     display: flex;
@@ -575,22 +562,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
           font-size: 14px;
           text-decoration: none; }
     .regform .yanzhengmareg div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .yanzhengmareg div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .yanzhengmareg div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .yanzhengmareg div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
+      flex: 1; }
   .regform .emailreg {
     order: 3;
     display: flex;
@@ -633,140 +605,9 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
           font-size: 14px;
           text-decoration: none; }
     .regform .emailreg div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .emailreg div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .emailreg div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .emailreg div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
-  .regform .pwd1 {
-    order: 4;
-    display: flex;
-    margin-top: 30px; }
-    .regform .pwd1 div:nth-child(1) {
       flex: 1; }
-    .regform .pwd1 div:nth-child(2) {
-      flex: 1;
-      display: flex;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center; }
-      .regform .pwd1 div:nth-child(2) p {
-        font-size: 18px;
-        color: #333333;
-        letter-spacing: 0;
-        line-height: 24px;
-        flex: 1; }
-      .regform .pwd1 div:nth-child(2) div {
-        border: 1px solid #B19B70;
-        border-radius: 53px;
-        height: 42px;
-        flex: 4;
-        justify-content: flex-start; }
-        .regform .pwd1 div:nth-child(2) div input, .regform .pwd1 div:nth-child(2) div .form-item .drop-down, .form-item .regform .pwd1 div:nth-child(2) div .drop-down {
-          height: 40px;
-          width: 70%;
-          margin-left: 26px;
-          border: none; }
-        .regform .pwd1 div:nth-child(2) div input:focus, .regform .pwd1 div:nth-child(2) div .form-item .drop-down:focus, .form-item .regform .pwd1 div:nth-child(2) div .drop-down:focus {
-          outline: none;
-          border: 0;
-          box-shadow: none; }
-        .regform .pwd1 div:nth-child(2) div a {
-          width: 30%;
-          color: #B19B70;
-          font-size: 14px;
-          text-decoration: none; }
-    .regform .pwd1 div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .pwd1 div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .pwd1 div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .pwd1 div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
-  .regform .pwd2 {
-    order: 5;
-    display: flex;
-    margin-top: 30px; }
-    .regform .pwd2 div:nth-child(1) {
-      flex: 1; }
-    .regform .pwd2 div:nth-child(2) {
-      flex: 1;
-      display: flex;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center; }
-      .regform .pwd2 div:nth-child(2) p {
-        font-size: 18px;
-        color: #333333;
-        letter-spacing: 0;
-        line-height: 24px;
-        flex: 1; }
-      .regform .pwd2 div:nth-child(2) div {
-        border: 1px solid #B19B70;
-        border-radius: 53px;
-        height: 42px;
-        flex: 4;
-        justify-content: flex-start; }
-        .regform .pwd2 div:nth-child(2) div input, .regform .pwd2 div:nth-child(2) div .form-item .drop-down, .form-item .regform .pwd2 div:nth-child(2) div .drop-down {
-          height: 40px;
-          width: 70%;
-          margin-left: 26px;
-          border: none; }
-        .regform .pwd2 div:nth-child(2) div input:focus, .regform .pwd2 div:nth-child(2) div .form-item .drop-down:focus, .form-item .regform .pwd2 div:nth-child(2) div .drop-down:focus {
-          outline: none;
-          border: 0;
-          box-shadow: none; }
-        .regform .pwd2 div:nth-child(2) div a {
-          width: 30%;
-          color: #B19B70;
-          font-size: 14px;
-          text-decoration: none; }
-    .regform .pwd2 div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .pwd2 div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .pwd2 div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .pwd2 div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
   .regform .yingyezhizhaoreg {
-    order: 6;
+    order: 4;
     display: flex;
     margin-top: 30px; }
     .regform .yingyezhizhaoreg div:nth-child(1) {
@@ -786,45 +627,24 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
         letter-spacing: 0;
         line-height: 24px;
         flex: 1; }
-      .regform .yingyezhizhaoreg div:nth-child(2) div {
+      .regform .yingyezhizhaoreg div:nth-child(2) .upyyzz {
         border: 1px solid #B19B70;
         border-radius: 53px;
         height: 42px;
-        flex: 4;
-        display: flex;
-        align-items: center;
-        justify-content: space-around; }
-        .regform .yingyezhizhaoreg div:nth-child(2) div input, .regform .yingyezhizhaoreg div:nth-child(2) div .form-item .drop-down, .form-item .regform .yingyezhizhaoreg div:nth-child(2) div .drop-down {
-          vertical-align: middle;
-          width: 70%;
-          margin-left: 26px;
-          border: none; }
-        .regform .yingyezhizhaoreg div:nth-child(2) div a {
-          width: 30%;
+        flex: 2; }
+        .regform .yingyezhizhaoreg div:nth-child(2) .upyyzz a {
+          width: 100%;
           color: #B19B70;
           font-size: 14px;
+          text-align: center;
+          line-height: 42px;
           text-decoration: none; }
       .regform .yingyezhizhaoreg div:nth-child(2) .zwreg {
         flex: 2; }
     .regform .yingyezhizhaoreg div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .yingyezhizhaoreg div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .yingyezhizhaoreg div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .yingyezhizhaoreg div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
+      flex: 1; }
   .regform .yingyezhizhaotupianreg {
-    order: 7;
+    order: 5;
     display: flex;
     margin-top: 10px; }
     .regform .yingyezhizhaotupianreg div:nth-child(1) {
@@ -851,24 +671,9 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
           width: 100%;
           color: #B19B70; }
     .regform .yingyezhizhaotupianreg div:nth-child(3) {
-      flex: 1;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-align-items: center;
-      align-items: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      justify-content: flex-start; }
-      .regform .yingyezhizhaotupianreg div:nth-child(3) img {
-        margin-left: 12px; }
-      .regform .yingyezhizhaotupianreg div:nth-child(3) .wrong {
-        font-size: 14px;
-        color: #D0021B; }
-      .regform .yingyezhizhaotupianreg div:nth-child(3) .right {
-        font-size: 14px;
-        color: #7ED321; }
+      flex: 1; }
   .regform .xieyireg {
-    order: 8;
+    order: 6;
     display: flex;
     margin-top: 10px; }
     .regform .xieyireg div:nth-child(1) {
@@ -904,7 +709,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     .regform .xieyireg div:nth-child(3) {
       flex: 1; }
   .regform .regbtninstance, .regform .forgetpwdbtn {
-    order: 8;
+    order: 7;
     display: flex; }
     .regform .regbtninstance div:nth-child(1), .regform .forgetpwdbtn div:nth-child(1) {
       flex: 1; }
@@ -946,7 +751,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
   margin-top: 90px; }
   .login-center div:nth-child(1) {
     height: 402px;
-    width: 600px; }
+    width: 600px;
+    background-color: #D0021B; }
     .login-center div:nth-child(1) image {
       height: 100%;
       width: 100%; }
@@ -1105,7 +911,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .search {
   border: 2px #B19B70 solid;
-  background: url(../images/search.png) no-repeat;
+  background: url(cb63fec92c417b1fe3a1ffbdfc504309.png) no-repeat;
   -webkit-background-size: 25px 25px;
   background-size: 25px 25px;
   background-position-y: center;
@@ -1222,7 +1028,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
           float: right;
           width: 15px;
           height: 15px;
-          background: url(../images/close.png) no-repeat;
+          background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
           background-size: 15px 15px; }
     .nav .cart-wrap .cart {
       position: relative;
@@ -1253,11 +1059,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
       padding-right: 19px;
       margin-right: 7px; }
     .nav .cart-wrap .drop-down {
-      background: url(../images/arrow_down.png) no-repeat;
+      background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .drop-up {
-      background: url(../images/arrow_up.png) no-repeat;
+      background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .split {
@@ -1347,6 +1153,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     color: #333333;
     text-decoration: none; }
   .query-area a:hover {
+    color: #B19B70; }
+  .query-area .select {
     color: #B19B70; }
   .query-area .query-name {
     font-weight: bold;
@@ -1456,6 +1264,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
 .container .brand-list-item {
   float: left;
   margin-top: 50px; }
+
 .container .brand-list-item:not(:nth-child(5n)) {
   margin-right: 85px; }
 
@@ -1463,6 +1272,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
 .form-item label {
   color: #333333;
   font-size: 18px; }
+
 .form-item input, .form-item .drop-down {
   -webkit-border-radius: 53px;
   border-radius: 53px;
@@ -1476,21 +1286,17 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     color: #999999; }
   .form-item input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     color: #999999; }
+
 .form-item input:focus, .form-item .drop-down:focus {
   outline: none; }
+
 .form-item .drop-down {
+  padding: 9px 0px 9px 58px;
+  background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
   background-position: 135px;
   background-size: 12px 7px;
+  width: 100px;
   display: inline-block; }
-  .form-item .drop-down .selected {
-    border: none;
-    height: 100%;
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    font-size: 18px;
-    padding-right: 14px;
-    background: url("http://ourjs.github.io/static/2015/arrow.png") no-repeat scroll right center transparent; }
   .form-item .drop-down .split {
     width: 1px;
     background: #B19B70;
@@ -1594,10 +1400,12 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
 
 .supplier-product-list .name {
   text-align: left; }
+
 .supplier-product-list .subscribe-btn {
   font-size: 14px;
   float: left !important;
   margin-top: 20px; }
+
 .supplier-product-list .social-btns-wrap {
   float: right; }
   .supplier-product-list .social-btns-wrap .social-btn {
@@ -1619,6 +1427,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     width: 430px;
     height: 430px;
     border: 1px solid #CCCCCC; }
+
 .product-details-wrap .product-details-header .product-images .product-image-list {
   float: left;
   margin-left: 12px; }
@@ -1630,6 +1439,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     .product-details-wrap .product-details-header .product-images .product-image-list ul li img {
       width: 78px;
       height: 78px; }
+
 .product-details-wrap .product-details-header .product-title {
   position: relative;
   margin-left: 60px;
@@ -1687,6 +1497,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
     left: 0px;
     -webkit-border-radius: 64px;
     border-radius: 64px; }
+
 .product-details-wrap .product-details {
   margin-top: 30px; }
   .product-details-wrap .product-details .product-details-header {
@@ -1733,16 +1544,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
             outline: none;
             border: 0;
             box-shadow: none; }
-        .right-content1 .content .modifyform .formline img {
-          margin-left: 8px; }
-        .right-content1 .content .modifyform .formline span {
-          margin-left: 4px;
-          font-size: 14px;
-          height: 40px;
-          color: #D0021B;
-          display: inline-block;
-          vertical-align: middle;
-          line-height: 40px; }
         .right-content1 .content .modifyform .formline a {
           border-radius: 53px;
           height: 42px;
@@ -1767,23 +1568,21 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder {
   text-align: center;
   display: block; }
 
-.right-content .content .sex {
+.right-content .content .sex, .right-content .content .mobile {
   float: left;
   width: 300px; }
-.right-content .content .mobile {
-  float: left;
-  width: 400px; }
+
 .right-content .content .group {
   margin-top: 38px; }
+
 .right-content .content .email {
   display: block;
   margin-top: 38px; }
   .right-content .content .email input, .right-content .content .email .form-item .drop-down, .form-item .right-content .content .email .drop-down {
     width: 424px; }
+
 .right-content .save-btn {
   width: 460px;
   padding: 10px 0px;
   margin-left: 58px;
   margin-top: 38px; }
-
-/*# sourceMappingURL=main.css.map */
