--- a/templates/products/category_product_list.html
+++ b/templates/products/category_product_list.html
@@ -3,24 +3,24 @@
 {% block content %}
 <div class="container">
     <div class="bread-crumb">
-        <a href="#">首页</a>><a href="#">品牌专区</a>><a href="#">张三牌茶具</a>
+        <a href="#">首页</a>><a href="#">{{ root_category.name }}</a>><a href="#">{{ category.name }}</a>
     </div>
     <div class="query-area">
         <div class="query-item-wrap">
             <span class="query-name">分类</span>
-            <a class="query-param" href="#">不限</a>
-            {% for category in root_category.category_set.all %}
-            <a class="query-param" href="#">{{ category.name }}</a>
+            <a class="query-param" href="{% url 'gift_platform_site:root_category_product_list' parent_category_id=root_category.id %}">不限</a>
+            {% for category_existed in root_category.category_set.all %}
+                <a class="query-param {% if category_existed.id == category.id %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category_existed.id  %}?price_range=0&in_private=0">{{ category_existed.name }}</a>
             {% endfor %}
         </div>
         <div class="query-item-wrap">
             <span class="query-name">单价</span>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=0&in_private={{ in_private }}">不限</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=1&in_private={{ in_private }}">0-20</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=2&in_private={{ in_private }}">20-50</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=3&in_private={{ in_private }}">50-100</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=4&in_private={{ in_private }}">100-200</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=5&in_private={{ in_private }}">200以上</a>
+            <a class="query-param {% if price_range == '0' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=0&in_private={{ in_private }}">不限</a>
+            <a class="query-param {% if price_range == '1' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=1&in_private={{ in_private }}">0-20</a>
+            <a class="query-param {% if price_range == '2' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=2&in_private={{ in_private }}">20-50</a>
+            <a class="query-param {% if price_range == '3' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=3&in_private={{ in_private }}">50-100</a>
+            <a class="query-param {% if price_range == '4' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=4&in_private={{ in_private }}">100-200</a>
+            <a class="query-param {% if price_range == '5' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=5&in_private={{ in_private }}">200以上</a>
         </div>
         <div class="query-item-wrap">
             <span class="query-name">数量</span>
@@ -31,12 +31,14 @@
             <a class="query-param" href="#">100-200</a>
             <a class="query-param" href="#">200以上</a>
         </div>
+        {% if has_private_area %}
         <div class="query-item-wrap">
             <span class="query-name">区域</span>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=0&price_range={{ price_range }}">不限</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=1&price_range={{ price_range }}">公有</a>
-            <a class="query-param" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=2&price_range={{ price_range }}">私有</a>
+            <a class="query-param {% if in_private == '0' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=0&price_range={{ price_range }}">不限</a>
+            <a class="query-param {% if in_private == '1' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=2&price_range={{ price_range }}">公有</a>
+            <a class="query-param {% if in_private == '2' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=1&price_range={{ price_range }}">私有</a>
         </div>
+        {% endif %}
     </div>
     <div class="sort-bar">
         <a href="#" class="sort-btn">综合</a>
@@ -60,39 +62,17 @@
             <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ products.previous_page_number }}&in_private={{ in_private }}&price_range={{ price_range }}">上一页</a>
         </span>
         {% endif %}
-        {% if products.paginator.num_pages < 5  %}
-            {% for i in page_range %}
-                <span class="page-item">
-                    <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ i }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
+        {% for i in pager_array %}
+            {% if i is '...' %}
+                <span class="page-item more">
+                    ...
                 </span>
-            {% endfor %}
-        {% else %}
-            <span class="page-item">
-                <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ 1 }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
-            </span>
-            <span class="page-item more">
-                ...
-            </span>
-
-        {% endif %}
-        <span class="page-item">
-            <a href="#">1</a>
-        </span>
-        <span class="page-item">
-            <a href="#">2</a>
-        </span>
-        <span class="page-item">
-            <a href="#">3</a>
-        </span>
-        <span class="page-item">
-            <a href="#">4</a>
-        </span>
-        <span class="page-item more">
-            ...
-        </span>
-        <span class="page-item">
-            <a href="#">4</a>
-        </span>
+            {% else %}
+                <span class="page-item">
+                    <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ 1 }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
+                </span>
+            {% endif %}
+        {% endfor %}
         <span class="page-item">
             {% if products.has_next %}
             <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ products.next_page_number }}&in_private={{ in_private }}&price_range={{ price_range }}">下一页</a>
