--- a/templates/products/category_product_list.html
+++ b/templates/products/category_product_list.html
@@ -68,7 +68,7 @@
                     ...
                 </span>
             {% else %}
-                <span class="page-item">
+                <span class="page-item {% if i == products.number|stringformat:"i" %} current-page {% endif %}">
                     <a href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?page={{ 1 }}&in_private={{ in_private }}&price_range={{ price_range }}">{{ i }}</a>
                 </span>
             {% endif %}
