--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -28,6 +28,9 @@
                 {% if error_message %}
                 <span style="color: red">{{ error_message }}</span>
                 {% endif %}
+                {% if sh_message %}
+                <span style="color: red">{{ sh_message }}</span>
+                {% endif %}
             </div>
 
             <div class="otherdiv">
