--- a/templates/usercenter/modifypassword.html
+++ b/templates/usercenter/modifypassword.html
@@ -1,17 +1,8 @@
 {% extends 'share/base_layout_usercenter.html' %}
 {% block title %}我的资料{% endblock %}
 
-{% block content %}
+{% block content1 %}
 {% load static %}
-<div class="container admin">
-    <div class="left-nav">
-        <div class="category">
-            <span class="category-header">账号管理</span>
-            <a class="nav-item" href="#">我的资料</a>
-            <a class="nav-item select" href="#">修改密码</a>
-            <a class="nav-item" href="#">消息中心</a>
-        </div>
-    </div>
     <div class="right-content1">
         <div class="content">
             <span class="content-header">
@@ -68,6 +59,4 @@
             </form>
         </div>
     </div>
-    <div class="clear"></div>
-</div>
 {% endblock %}
