1.首页增加公告中心2.登录增加form校验

--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -31,6 +31,9 @@
                 {% if sh_message %}
                 <span style="color: red">{{ sh_message }}</span>
                 {% endif %}
+                 {% if loginform.errors %}
+                     <span style="color: red">{{ loginform.errors.username.0 }}</span>
+                {% endif %}
             </div>
 
             <div class="otherdiv">
